--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -133,6 +133,10 @@ const url = new URL(Astro.url.pathname, 'https://nga-osaka.com');
 	 .text-center {
 		 text-align: center;
 	 }
+	 .block-center {
+		 width: fit-content;
+		 margin-inline: auto;
+	 }
 	 .u-display-block {
 		 display: block!important;
 	 }
