--- a/src/pages/liquor-shop/[slug].astro
+++ b/src/pages/liquor-shop/[slug].astro
@@ -155,6 +155,8 @@ const storeImage3MimeType = store.acf['liquor-shop_image3'] ? store.acf['liquor-
                             station = {shop.station},
                             taste = {shop.acf.sake_taste},
                             flavor = {shop.acf.sake_flavor},
+                            temperature = {shop.acf.sake_temp},
+                            distance = "0"
                     />
             ))
           }
