--- a/src/pages/store/index.astro
+++ b/src/pages/store/index.astro
@@ -185,8 +185,8 @@ stores.forEach(store => {
                     </figure>
                     <h2 class="store-title" transition:name="title"><span class="store-number">{store.acf.store_number}</span>{store.title.rendered}<span class="store-price">{Number(store.acf.appetizer_price1).toLocaleString()}円</span></h2>
                     <div class="store-content">
-                      <p class="store-content__appetizer"><img src="/assets/images/icon-food.svg" width="18" height="18" alt="">{store.acf.appetizer_name}</p>
-                      <p class="store-content__sake"><img src="/assets/images/icon-sake.svg" width="18" height="18" alt="">{store.acf.sake_service}</p>
+                      <p class="store-content__appetizer"><img src="/assets/images/icon-food.svg" width="18" height="18" alt="">{store.acf.appetizer_name.replaceAll('　',' ')}</p>
+                      <p class="store-content__sake"><img src="/assets/images/icon-sake.svg" width="18" height="18" alt="">{store.acf.sake_service.replaceAll('　',' ')}</p>
                       <p class="store-content__temp"><img src="/assets/images/icon-temp.svg" width="18" height="18" alt="">{store.temperature}</p>
                       <p class="store-content__time"><img src="/assets/images/icon-time.svg" width="18" height="18" alt="">{store.acf.event_start}〜{store.acf.event_end}</p>
                       <p class="store-content__seat"><img src="/assets/images/icon-seat.svg" width="18" height="18" alt="">立食 {store.acf.capacity_standing}名/着席 {store.acf.capacity_sitting}名/合計 {Number(store.acf.capacity_standing) + Number(store.acf.capacity_sitting)}名</p>
