feat(store):絞り込み追加

--- a/src/pages/map/index.astro
+++ b/src/pages/map/index.astro
@@ -113,7 +113,8 @@ stores.sort((a, b) => a.acf.store_number - b.acf.store_number);
     directionsRenderer.setOptions({
       markerOptions: {
         visible: false,
-      }
+      },
+      preserveViewport: true,
     });
 
     // マーカーを追加
